--- a/.github/workflows/ci_game_of_life.yml
+++ b/.github/workflows/ci_game_of_life.yml
@@ -1,24 +1,11 @@
-
 name: Game of life testing
 
 on: push
 
 jobs:
-   game-of-life-test:
-    runs-on: ${{ matrix.os }}
-    strategy:
-     fail-fast: false
-     matrix:
-        java: [ '17', '21' ]
-        os: [ubuntu-latest, windows-latest]
+  game-of-life-test:
+    runs-on: ubuntu-latest
     steps:
-      - uses: stCarolas/setup-maven@v5
-        with:
-          maven-version: 3.8.2
-      - uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: ${{ matrix.java }}
       - name: Java version
         run: java -version
       - name: Maven version
