--- a/.github/workflows/ci_game_of_life.yml
+++ b/.github/workflows/ci_game_of_life.yml
@@ -7,6 +7,13 @@ jobs:
   game-of-life-test:
     runs-on: ubuntu-latest
     steps:
+      - uses: stCarolas/setup-maven@v5
+        with:
+          maven-version: 3.8.2
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
       - name: Java version
         run: java -version
       - name: Maven version
